src/test/ui/error-codes/E0090.stderr
error[E0090]: wrong number of lifetime arguments: expected 2, found 1
  --> $DIR/E0090.rs:4:5
   |
LL |     foo::<'static>(); //~ ERROR wrong number of lifetime arguments: expected 2, found 1 [E0090]
   |     ^^^^^^^^^^^^^^ expected 2 lifetime arguments

error: aborting due to previous error

For more information about this error, try `rustc --explain E0090`.
